tests/NormalTests/paczka1/fuzzy1/78713609.err
Error in line 9: b0Ss2pAtlL S916 42,6
Error in line 20: bK9wcamygS6 S33 38,5
Error in line 22: S916 S816 73,2
